[tool.poetry]
package-mode = false

[project]
name = "schedule-mcp"
version = "0.1.0"
description = ""
authors = [
    { name = "sinh", email = "sinh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-genai (>=1.56.0,<2.0.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "sentence-transformers (>=3.0.1,<4.0.0)",
    "aioboto3 (>=13.1.1,<14.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "pdfplumber (>=0.11.4,<0.12.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
